<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tab_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/tab_quests"
        android:icon="@drawable/ic_nav_quests"
        android:title="@string/nav_quests" />
    <item
        android:id="@+id/tab_learn"
        android:icon="@drawable/ic_nav_learn"
        android:title="@string/nav_learn" />
    <item
        android:id="@+id/tab_results"
        android:icon="@drawable/ic_nav_results"
        android:title="@string/nav_results" />
    <item
        android:id="@+id/tab_badges"
        android:icon="@drawable/ic_nav_badges"
        android:title="@string/nav_badges" />
</menu>
